--- a/package.json
+++ b/package.json
@@ -21,5 +21,29 @@
   "bugs": {
     "url": "https://github.com/cmtp/node-elastic/issues"
   },
-  "homepage": "https://github.com/cmtp/node-elastic#readme"
+  "homepage": "https://github.com/cmtp/node-elastic#readme",
+  "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "compression": "^1.6.2",
+    "consign": "^0.1.4",
+    "cors": "^2.8.3",
+    "express": "^4.15.2",
+    "helmet": "^3.6.0",
+    "jwt-simple": "^0.5.1",
+    "mongoose": "^4.9.8",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "apidoc": "^0.17.5",
+    "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0",
+    "supertest": "^3.0.0"
+  }
 }
