--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is an example of elastic search with nodejs",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
+    "dev": "nodemon index.js --exec babel-node --presets es2015",
     "test": "test"
   },
   "repository": {
@@ -44,6 +46,7 @@
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "mocha": "^3.3.0",
+    "nodemon": "^1.11.0",
     "supertest": "^3.0.0"
   }
 }
