--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.6.2",
     "consign": "^0.1.4",
     "cors": "^2.8.3",
+    "elasticsearch": "^13.0.0",
     "express": "^4.15.2",
     "helmet": "^3.6.0",
     "jwt-simple": "^0.5.1",
