--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is an example of elastic search with nodejs",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
-    "dev": "nodemon index.js --exec babel-node --presets es2015",
+    "start": "babel-node src/index.js",
+    "dev": "nodemon src/index.js --exec babel-node --presets es2015",
     "test": "test"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "q": "^1.5.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
